Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -87,7 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Driver class here\n"
+    "# import Driver class here\n",
+    "from "
    ]
   },
   {
