Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Passenger class here"
+    "# import Passenger class here\n",
+    "from passenger import Pa"
    ]
   },
   {
