--- a/index.ipynb
+++ b/index.ipynb
@@ -105,12 +105,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Passenger'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-9bb28cd257c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# import Passenger class here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpassenger\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPassenger\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Passenger'"
+     ]
+    }
+   ],
    "source": [
     "# import Passenger class here\n",
-    "from passenger import Pa"
+    "from passenger import Passenger"
    ]
   },
   {
