--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meryl = None\n",
+    "meryl = Passenger()\n",
     "daniel = None\n",
     "print(meryl, daniel)"
    ]
