--- a/index.ipynb
+++ b/index.ipynb
@@ -200,14 +200,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Ride' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-159a14e613ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mride_to_school\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRide\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mride_home\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRide\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mride_to_school\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mride_home\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Ride' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "ride_to_school = Rise(0)\n",
-    "ride_home = None\n",
+    "ride_to_school = Ride()\n",
+    "ride_home = Ride()\n",
     "print(ride_to_school, ride_home)"
    ]
   },
